# hunnu-lang

./: .clang-format  .editorconfig  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile.lint  README.md  Roadmap.md  SECURITY.md  bugs.md  future-improvements.md  hunnu-lint.sh  hunnu-opencode-prompt.md  install-hooks.sh  install.bat  install.sh  plan.md  task.md  tasks.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs
cli/: cli.c  cli.h  main.c
compiler/: import.c  import.h  scope.c  scope.h  value.c  value.h  version.c  version.h
compiler-rust/: Cargo.toml
compiler-rust/include/: hunnu_compiler.h
compiler-rust/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs
compiler/ast/: ast.c  ast.h  ast_free.c  ast_print.c
compiler/i18n/: i18n.c  i18n.h
compiler/interpreter/: builtins.c  builtins.h  call.c  eval.c  exec.c  interpreter.c  interpreter.h
compiler/lexer/: lexer.c  lexer.h  token.c  token.h
compiler/parser/: parse_decl.c  parse_expr.c  parse_stmt.c  parser.c  parser.h
compiler/transpile/: transpile.c
compiler/vm/: compiler.c  compiler.h  opcodes.h  vm.c  vm.h
docs/: language-spec.md  quickstart.md
examples/: main.hn  test_all_features.hn  test_assign2.hn  test_enum.hn  test_error.hn  test_error_simple.hn  test_float_ffi.hn  test_for.hn  test_for2.hn  test_fp.hn  test_hof.hn  test_immut.hn  test_import_simple.hn  test_libc.hn  test_loop.hn  test_module.hn  test_module2.hn  test_rust_ffi.hn  test_simple_math.hn  test_single.hn  test_str_return.hn  test_try_catch.hn  test_unsafe.hn  test_vm.hn  test_while.hn
examples/mn/: control_flow.hn  fib.hn  hello.hn  oop.hn  variables.hn
self/: lexer.hn  token.hn
stdlib/: array.hn  fs.hn  io.hn  libc.hn  math.hn  string.hn  time.hn
tests/: CMakeLists.txt  main.c  minunit.h  test_interpreter.c  test_lexer.c  test_parser.c  test_scope.c  test_value.c
vm-rust/: Cargo.toml
vm-rust/include/: hunnu_vm.h
vm-rust/src/: lib.rs  main.rs  opcodes.rs  tests.rs  value.rs  vm.rs
vm-rust/tests/integration/: run_integration_tests.sh
