[package]
name = "hunnu-compiler"
version = "0.1.0"
edition = "2021"
description = "Hunnu Language Rust Compiler - Month 3 AOT Compiler Foundation"

[lib]
name = "hunnu_compiler"
crate-type = ["staticlib", "lib"]

[[bin]]
name = "hunnu-compiler"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[dependencies.llvm-sys]
version = "221"
optional = true

[features]
default = []
llvm-codegen = ["llvm-sys"]
