[package]
name = "hunnu-vm"
version = "0.2.0"
edition = "2021"
description = "Bytecode virtual machine for the Hunnu programming language"

[lib]
name = "hunnu_vm"
crate-type = ["staticlib", "lib"]  # Build as both static lib and Rust lib

[[bin]]
name = "hunnu-vm"
path = "src/main.rs"

[dependencies]
